--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required(VERSION 2.8.9)
-project (test)
-add_executable(test  test/Test.cpp)
+project (sample)
+add_executable(sample  test/Containers.cpp)
