--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required(VERSION 2.8.9)
 project (sample)
-add_executable(sample  test/Containers.cpp)
+add_executable(sample  test/OrderBook.cpp)
