Add support for setting headers

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,5 @@
 FROM ubuntu
 RUN apt-get update && apt-get install -y gdb make gcc
 RUN apt-get install -y cmake
-RUN apt-get install -y g++ vim
+RUN apt-get install -y g++ vim libcurl4-gnutls-dev
 ENV CXX /usr/bin/g++
-
