Initial implementation of persistent key val store

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.9)
 project (sample)
 find_package(CURL REQUIRED)
-add_executable(sample test/http.cpp)
+add_executable(sample src/kv/FastKeyValue.cpp)
 include_directories(${CURL_INCLUDE_DIR})
 target_link_libraries(sample ${CURL_LIBRARIES})
