--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,16 @@
 cmake_minimum_required(VERSION 2.8.9)
-project (sample)
+project (test)
+
 #find_package(CURL REQUIRED)
-#add_executable(sample src/kv/FastKeyValue.cpp)
-add_executable(sample src/data/DatastructureSerialize.cpp)
+add_executable(keyval src/kv/FastKeyValue.cpp)
+add_executable(experiment src/experiment/Experiment3.cpp)
+
 #include_directories(${CURL_INCLUDE_DIR})
-target_link_libraries(sample ${CURL_LIBRARIES})
+target_link_libraries(keyval ${CURL_LIBRARIES})
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
-target_link_libraries(sample Threads::Threads)
+target_link_libraries(keyval Threads::Threads)
+
+#add_executable(serialize src/data/DatastructureSerialize.cpp)
+#target_link_libraries(serialize Threads::Threads)
